finally got the sever js to work properly, can now see the api friends from home.html, changed some styling on survey.html

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -3,9 +3,10 @@ body {
 }
 
 #homePage {
-  background-color: lightblue;
+  background-color: lightcoral;
   margin-top: 15%;
-  border: rgb(5, 171, 226) solid 50px;
+  /* border: solid 50px; */
+  border-radius: 5px;
 }
 
 label {
@@ -22,4 +23,10 @@ label {
 
 .links {
   margin-bottom: 2%;
+}
+
+/* SURVEY PAGE */
+
+#surveyPage {
+  border: lightcoral solid 50px;
 }
