got the modal kind of working it just doesn't show who the best match is but the form does have some validation where if the user hasnt filled out the survey properly the correct match will not be shown

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -28,5 +28,6 @@ label {
 /* SURVEY PAGE */
 
 #surveyPage {
-  border: lightcoral solid 50px;
+  border-right: lightcoral solid 100px;
+  border-left: lightcoral solid 100px;
 }
